<resources>
    <string name="app_name">SANDBOX</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Hello">Hello</string>
    <string name="bnd_sandbox">SANDBOX</string>
    <string name="bnd_healthier_text">Get healthier with Eateries that serve Healthier Food Options!</string>
    <string name="BnD_qn_text">What would you like to do today? </string>
    <string name="buyer_button">Buy Food</string>
    <string name="deliverer_button">Deliver Food</string>
    <string name="search_btn">Search Eateries</string>
    <string name="food_op_selection_header">Choose food option</string>
    <string name="create_delivery_location">Choose location</string>
    <string name="create_delivery_time">Estimated time of arrival to location:</string>
    <string name="create_delivery_rate">Delivery fee:</string>
    <string name="create_delivery_end">Order cut-off time:</string>
    <string name="pending_orders_header">Pending orders</string>
    <string name="order_status_header">Order status</string>

    <string name="empty">TODO: this string needs to be changed later</string>
    <string name="order_status_button_1">Chat with users</string>
    <string name="order_status_button_2">Order complete</string>
    <string name="order_status_button_3">Order incomplete</string>
    <string name="rating_desc">How was your buyer or deliverer?</string>
    <string name="review_request_header">Any other comments? </string>
    <string name="review_request_body">Enter any comments here</string>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minutes">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="delivery_fee">
        <item>1.00</item>
        <item>1.50</item>
        <item>2.00</item>
        <item>2.50</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string-array name="deliver_to">
        <item>North Spine</item>
        <item>South Spine</item>
        <item>Hall 1</item>
        <item>Hall 10</item>
        <item>Hall 14</item>
        <item>Crespion</item>
        <item>North Hill</item>
        <item>Tamarind</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="place_order_deliverer_name">Deliverer\'s name: </string>
    <string name="place_order_rate">Rate: </string>
    <string name="place_order_deliver_location">Deliver to: </string>
    <string name="place_order_title">Place order</string>
    <string name="place_order_eta">Estimated time of arrival: </string>
    <string name="place_order_order_header">Order: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_complete">Your order is COMPLETE !</string>
    <string name="order_incomplete">Your order is INCOMPLETE...</string>
    <string name="order_complete_text">Thank you for using the Sandbox application for your orders.</string>
    <string name="pls_rate_text">Please give a rating for your buyer or deliverer.</string>
    <string name="button_rate">Rate</string>
    <string name="submit_rating">Submit</string>
    <string name="rating_header">Rating</string>
    <string name="nav_home">Home</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_pending">Pending</string>
    <string name="nav_completed">Completed</string>
    <string name="nav_settings">Settings</string>
    <string name="maptype_normal">Normal</string>
    <string name="maptype_satellite">Satellite</string>
    <string name="maptype_hybrid">Hybrid</string>
    <string name="maptype">Map type:</string>

</resources>