<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/settings_bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorTitle"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/colorPrimary"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation" />

    <TextView
        android:id="@+id/settings_textsize_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/maptype"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/settings_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <RadioGroup
        android:id="@+id/settings_maptype_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/settings_textsize_text"
        app:layout_constraintTop_toBottomOf="@+id/settings_textsize_text"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/maptype_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maptype_normal" />

        <RadioButton
            android:id="@+id/maptype_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maptype_satellite" />

        <RadioButton
            android:id="@+id/maptype_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maptype_hybrid" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>